other-vpol/pdb-maxunavailable/pdb-maxunavailable.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: pdb-maxunavailable
  annotations:
    policies.kyverno.io/title: PodDisruptionBudget maxUnavailable Non-Zero in ValidatingPolicy
    policies.kyverno.io/category: Other in Vpol 
    policies.kyverno.io/minversion: 1.19.1
    kyverno.io/kyverno-version: 1.14.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: PodDisruptionBudget
    policies.kyverno.io/description: >-
      A PodDisruptionBudget which sets its maxUnavailable value to zero prevents
      all voluntary evictions including Node drains which may impact maintenance tasks.
      This policy enforces that if a PodDisruptionBudget specifies the maxUnavailable field
      it must be greater than zero.
spec:
  validationActions: 
    - Audit
  evaluation:
    background:
      enabled: false
  matchConstraints:
    resourceRules:
      - apiGroups:   ["policy"]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["poddisruptionbudgets"]
  validations:
    - expression: "int(object.spec.?maxUnavailable.orValue(1)) > 0 || exceptions.allowedValues.exists(value, value == 'maxUnavailable:' + string(object.spec.?maxUnavailable.orValue(1)))"
      message: "The value of maxUnavailable must be greater than zero."
