other-vpol/pdb-maxunavailable/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pdb-maxunavailable
policies:
- ../pdb-maxunavailable.yaml
resources:
- resource.yaml
exceptions:
- exceptions.yaml
results:
- isValidatingPolicy: true
  kind: PodDisruptionBudget
  policy: pdb-maxunavailable
  resources:
  - kube-system/bad-pdb-zero
  - kube-system/bad-pdb-negative-one
  result: fail
- isValidatingPolicy: true
  kind: PodDisruptionBudget
  policy: pdb-maxunavailable
  resources:
  - kube-system/good-pdb
  - kube-system/good-pdb-none
  - kube-system/exception-pdb-zero
  result: pass
